<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 1) Кнопка «назад» -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="20dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_button_desc"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnBackground" />

    <!-- 2) Заголовок -->

    <!-- 3) Поле «Логин» -->

    <TextView
        android:id="@+id/tvLoginTitle"
        style="@style/TextHeadlineBold"
        android:layout_width="101dp"
        android:layout_height="39dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="18dp"
        android:text="@string/Login"
        android:textAlignment="@null"
        app:layout_constraintBottom_toTopOf="@+id/loginLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 4) Поле «Пароль» с глазом -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 5) Кнопка «Продолжить» -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        style="@style/Widget.My.Button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="26dp"
        android:text="@string/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passLayout" />

    <!-- 6) Большое изображение внизу, обрезанное по центру -->
    <ImageView
        android:id="@+id/bottomImage"
        android:layout_width="416dp"
        android:layout_height="365dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/welcomesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContinue" />

</androidx.constraintlayout.widget.ConstraintLayout>
