<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <!-- верхняя волна -->

        <!-- логотип -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="75dp"
            android:layout_height="70dp"
            android:layout_marginTop="222dp"
            android:contentDescription="@null"
            android:src="@drawable/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoword"
            android:layout_width="100dp"
            android:layout_height="12dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@null"
            android:src="@drawable/activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:tint="?attr/colorOnBackground" />

        <!-- заголовок -->
        <TextView
            android:id="@+id/title"
            style="@style/TextHeadlineBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <!-- подзаголовок -->
        <TextView
            android:id="@+id/subtitle"
            style="@style/TextSubtitle"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <!-- кнопка регистрации -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/Widget.My.Button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="44dp"
            android:text="@string/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="162dp"
            android:layout_height="62dp"
            android:layout_marginTop="28dp"
            android:text="@string/have_account"
            android:textColor="?attr/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
